# starters

./: .dockerignore  .env  .gitignore  .htaccess  .php-cs-fixer.cache  Caddyfile  Dockerfile  Dockerfile.websocket  Notes.txt  README.md  Schema.txt  bootstrap.php  composer.json  config.php  db.php  docker-compose.yml  docker.yml  due-bills.php  entrypoint.sh  expired-items.php  fabfile.py  index.php  listener.php  loadenv.php  makefile  test_db.py  websocket.php
Controllers/: auth.php  productscontroller.php  warehousecontroller.php
Model/: inventory.php  products.php  user.php  warehouse.php
Routes/: api.php
controllers/: AccountingController.php  AdminController.php  AuthController.php  BaseController.php  CustomerController.php  DashboardController.php  EmployeeController.php  HumanResourceController.php  InventoryController.php  KitchenController.php  ProductController.php  TradeController.php  VendorController.php  WarehouseController.php
database/: Database.php
db-init/: init.sql
docker/: .gitignore  Dockerfile-ws  Dockerfile.app  Dockerfile.liquibase  Dockerfile.websocket
docs/: dbschema.txt  docker-compose.yml  docker.yml
models/: Accounting.php  Admin.php  Customer.php  Dashboard.php  Employee.php  HumanResource.php  Inventory.php  Kitchen.php  Product.php  Purchase.php  Sale.php  Search.php  User.php  Vendor.php  Warehouse.php
routes/: api.php
schema/: dev-dump.sql  init-db.sql  (+4 more)
websocket/: .gitignore  main.py  pyproject.toml
websocket/modules/: auth.py  logging.py  schemas.py  utils.py
websocket/modules/websocket/: manager.py  router.py
(+26 files in other folders)
